<resources>
    <string name="app_name">Go4Lunch</string>

    <!-- activity_sign_in.xml -->
    <string name="go4lunch_logo">Go4Lunch logo</string>
    <string name="app_subtitle">Find a nice restaurant and invite your co-workers for lunch !</string>
    <string name="authentication_sign_in_btn">Sign in</string>
    <string name="authentication_sign_out_btn">Sign out</string>
    <string name="activity_sign_in_description_business_lunch_photo">Business lunch photo</string>
    <string name="error_not_connected">You must log in !</string>
    <string name="error_authentication_canceled">Authentication canceled</string>
    <string name="error_no_internet">No internet connection !</string>
    <string name="error_unknown_error">An unknown error has occurred</string>
    <string name="connection_succeed">Authentication successful !</string>

    <!-- authentication_layout.xml -->
    <string name="sign_in_with_fb">Sign in with Facebook</string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="sign_in_with_twitter">Sign in with Twitter</string>
    <string name="sign_in_with_email">Sign in with Email</string>

    <!-- Bottom navigation view -->
    <string name="bottom_navigation_menu_map_view">Map View</string>
    <string name="bottom_navigation_menu_list_view">List View</string>
    <string name="bottom_navigation_menu_workmates">Workmates</string>

    <!-- List view fragment -->
    <string name="open_restaurant">Open</string>
    <string name="closed_restaurant">Closed</string>

    <!-- Workmates fragment -->
    <string name="place_workmates_eating">\u0020is eating at\u0020 </string>
    <string name="workmates_not_place">\u0020hasn\'t decided yet</string>

    <!-- Toolbar -->
    <string name="i_am_hungry">I\'m Hungry\!</string>
    <string name="available_workmates">Available workmates</string>
    <string name="search">Search</string>
    <string name="content_description_search">Search button</string>

    <!-- Used in NavigationDrawer -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="drawer_your_lunch_item">YOUR LUNCH</string>
    <string name="drawer_settings_item">SETTINGS</string>
    <string name="drawer_logout_item">LOGOUT</string>
    <string name="drawer_description_user_avatar">Photo of a workmate</string>
    <string name="drawer_description_business_lunch_photo">Business lunch photo</string>

    <!-- Autocomplete search bar -->
    <string name="search_bar_hint">Search restaurants</string>
    <string name="search_bar_workmates_hint">Search workmates</string>

    <!-- FACEBOOK APPLICATION ID -->
    <string name="facebook_application_id" translatable="false">1316977875828805</string>
    <string name="facebook_login_protocol_scheme" translatable="false">fb1316977875828805</string>
    <string name="facebook_client_token">af259ccf4572e34d85a57b1fc2d414ec</string>

    <!-- FRAGMENTS -->
    <string name="hello_map_fragment">Map view fragment</string>
    <string name="hello_list_view_fragment">List View fragment</string>
    <string name="hello_workmates_fragment">Workmates fragment</string>
    <string name="hello_transaction_view_fragment">Transaction view fragment</string>

</resources>