<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <item
        android:id="@+id/mapViewFragment"
        android:enabled="true"
        android:icon="@drawable/ic_map_view"
        android:title="@string/bottom_navigation_menu_map_view" />
    <item
        android:id="@+id/listViewFragment"
        android:enabled="true"
        android:icon="@drawable/ic_list_view"
        android:title="@string/bottom_navigation_menu_list_view" />
    <item
        android:id="@+id/workmatesFragment"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_person_24"
        android:title="@string/bottom_navigation_menu_workmates" />
</menu>