<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <group android:checkableBehavior="none">
        <item
            android:id="@+id/item1"
            android:icon="@drawable/ic_your_lunch_24dp"
            android:title="@string/drawer_your_lunch_item"
            app:showAsAction="ifRoom" />
        <item
            android:id="@+id/item2"
            android:icon="@drawable/ic_settings_24dp"
            android:title="@string/drawer_settings_item"
            app:showAsAction="ifRoom" />
        <item
            android:id="@+id/item3"
            android:icon="@drawable/ic_log_out_24dp"
            android:title="@string/drawer_logout_item"
            app:showAsAction="ifRoom" />
    </group>

</menu>