<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".authentication.SignInActivity">

    <!-- BACKGROUND IMAGE -->
    <ImageView
        android:id="@+id/activity_sign_in_background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:adjustViewBounds="true"
        android:contentDescription="@string/activity_sign_in_description_business_lunch_photo"
        android:scaleType="centerCrop"
        android:src="@drawable/auth_background" />

    <!-- CONTAINER -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/xlarge_margin"
            android:layout_weight="1">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginStart="@dimen/small_margin"
                android:layout_marginTop="@dimen/default_margin"
                android:layout_marginEnd="@dimen/small_margin"
                android:layout_marginBottom="@dimen/small_margin"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <!-- APP LOGO -->
                <ImageView
                    android:id="@+id/activity_sign_in_app_logo"
                    android:layout_width="@dimen/size_sign_in_background_image_width"
                    android:layout_height="@dimen/size_sign_in_background_image_height"
                    android:layout_weight="1"
                    android:background="@drawable/ic_logo_go4lunch"
                    android:contentDescription="@string/go4lunch_logo" />

                <!-- TITLE GO4LUNCH -->
                <TextView
                    android:id="@+id/activity_sign_in_app_name"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_marginTop="@dimen/default_margin"
                    android:layout_weight="1"
                    android:text="@string/app_name"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Headline2"
                    android:textColor="@android:color/white"
                    android:textStyle="bold" />

                <!-- DESCRIPTION GO4LUNCH  -->
                <TextView
                    android:id="@+id/activity_sign_in_app_description"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/app_subtitle"
                    android:textColor="@android:color/white"
                    android:textSize="10sp"
                    android:textStyle="bold|italic"
                    tools:ignore="SmallSp" />

            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:id="@+id/activity_sign_in_buttons_container"
                android:layout_width="260dp"
                android:layout_height="0dp"
                android:layout_marginTop="@dimen/default_margin"
                android:layout_marginBottom="@dimen/default_margin"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/sign_in_button"
                    style="?android:attr/borderlessButtonStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/large_margin"
                    android:background="@color/lightOrange"
                    android:paddingStart="10dp"
                    android:text="@string/authentication_sign_in_btn"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    tools:ignore="RtlSymmetry,TextContrastCheck" />

            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>